--- a/ApiCEP.html
+++ b/ApiCEP.html
@@ -6,15 +6,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>BUSCADOR CEP</title>
-	<div id="resultado"></div>
-
 	<script src="apicep.js"></script>
+	
 	<style>
 	
 	hr {color:#ffcc00; background:#775041; border:0px; width:100%; height:3px; text-align:center;}
 	h1:hover { text-align: center;}
     a:hover{  color: rgb(20, 224, 20);}
-	div{display: flex;justify-content: right;text-align: right;}
+	div{}
 
 	</style>
     </head>
@@ -29,14 +28,9 @@
 				name="cep" type="text" id="cep" value="" placeholder="CEP"/>
 				</form>	
 				</td>					
-			 </tr>
-
-			 <script>
-
-			 </script>
-			
+			 </tr>			
 		</table>
 		<hr/>
-		<div id="resultado"></div>	
+		<td><div id="resultado"></div></td>	
     </body>
 </html>
