--- a/ApiCEP.html
+++ b/ApiCEP.html
@@ -6,30 +6,46 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>BUSCADOR CEP</title>
-	<script src="apicep.js"></script>
-	
+
+	<script src="ApiCEP.js"></script>
 	<style>
 	
 	hr {color:#ffcc00; background:#775041; border:0px; width:100%; height:3px; text-align:center;}
 	h1:hover { text-align: center;}
-    a:hover{  color: rgb(20, 224, 20);}
-
+    a{  color: rgb(20, 224, 20);}
+	
+	input[type="submit"] {
+			
+  			font-weight: bold;
+  			padding: 4px 8px;
+  			border:1px solid #000;
+ 			background: #3b5998;
+  			color:#fff;
+		}
+	form{
+		width: 300px;
+		float: right;
+  		margin: 0 auto;
+	}	
 	</style>
     </head>
 
     <body>   
+	
 		<table >
 			<tr>
 				<td><img src="https://www.brq.com/images/logo-brq.png" alt="logo" width="30%"/></td>
 				<td width="70%"><h1 style=color:lightseagreen;> Buscador de CEP BRQ</h1>
 				<form id="frmCep">
-				<input style="width:400px;padding:5px;border:1px solid #CCC;color: #333;float:right;margin-top:-20px"
-				name="cep" type="text" id="cep" value="" placeholder="CEP"/>
-				</form>	
-				</td>					
-			 </tr>			
+				<input style="padding:5px;border:1px solid #CCC;color: #333;margin-top:-20px"
+				name="cep" type="text" id="cep" value="" placeholder="INFORME O CEP AQUI" required /> 
+				<input type="submit" value="Enviar" >				
+				</form>								
+			</tr>
 		</table>
 		<hr/>
-		<td><div id="resultado"></div></td>	
+		 <div id="resultado"></div>	
+		
+		
     </body>
 </html>
