--- a/ApiCEP.html
+++ b/ApiCEP.html
@@ -10,12 +10,10 @@
 	<script src="ApiCEP.js"></script>
 	<style>
 	
-	hr {color:#ffcc00; background:#775041; border:0px; width:100%; height:3px; text-align:center;}
-	h1:hover { text-align: center;}
+	hr {color:#ffcc00; background:#2d7adf; border:0px; width:100%; height:3px; text-align:center;}
     a{  color: rgb(20, 224, 20);}
 	
 	input[type="submit"] {
-			
   			font-weight: bold;
   			padding: 4px 8px;
   			border:1px solid #000;
@@ -35,11 +33,11 @@
 		<table >
 			<tr>
 				<td><img src="https://www.brq.com/images/logo-brq.png" alt="logo" width="30%"/></td>
-				<td width="70%"><h1 style=color:lightseagreen;> Buscador de CEP BRQ</h1>
+				<td width="70%"><h1 style="color: rgb(69, 38, 241);"><strong>Buscador de CEP BRQ</strong></h1>
 				<form id="frmCep">
 				<input style="padding:5px;border:1px solid #CCC;color: #333;margin-top:-20px"
 				name="cep" type="text" id="cep" value="" placeholder="INFORME O CEP AQUI" required /> 
-				<input type="submit" value="Enviar" >				
+				<input type="submit" value="Enviar">				
 				</form>								
 			</tr>
 		</table>
